<resources>
    <string name="app_name">AppDeEvaluacionModulo03</string>

    <string name="opcionmain1">Crear cuenta</string>
    <string name="opcionmain2">Ya tengo una cuenta</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">quilTerrier app</string>
    <string name="login">LOGIN</string>
    <string name="creracuenta">CREAR CUENTA</string>
    <string name="loginactivityusuario">Ingrese su E-mail</string>
    <string name="loginactivityusuarioedittext">Usuario</string>
    <string name="loginactivitypassword">Ingrese su contraseña</string>
    <string name="loginactivitypasswordedittext">contraseña</string>
    <string name="loginactivitybtniniciarsesion">INICIAR SESION</string>
    <string name="crearcuentaactivitycorreo">E-mail</string>
    <string name="crearcuentaactivitycorreoedittext">Ingrese su E-mail</string>
    <string name="crearcuentaactivitypassword2">Repita su contraseña</string>
    <string name="crearcuentaactivitybtnregistarse">REGISTRARSE</string>
    <string name="btnregresar">REGRESAR</string>
    <string name="perritos">quilTerrier app</string>
    <string name="perritomensaje">WOW!! SO MUCH login</string>
    <string name="cerrarsesion">CERRAR SESION</string>
    <string name="money">$ </string>
    <string name="button">Button</string>
    <string name="Gasto">Ingresa tu gasto</string>
    <string name="nada"></string>
    <string name="crea">CREA</string>
    <string name="actualiza">ACTUALIZA</string>
    <string name="elimina">BORRA</string>
    <string name="busca">BUSCA</string>

</resources>